force-app/main/default/objects/NS_RequestFlow__c/NS_RequestFlow__c.object-meta.xml
<CustomObject>
    <description>This is a Junction object, maps the requests with related flows</description>
    <label>Request Flow</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Request Flow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>