force-app/main/default/objects/NS_RequestFlow__c/fields/NS_Description__c.field-meta.xml
<CustomField>
    <fullName>NS_Description__c</fullName>
    <description>Shows the description of requests and the tasks they accomplish</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>