force-app/main/default/objects/NS_RequestFlow__c/fields/NS_Flow__c.field-meta.xml
<CustomField>
    <fullName>NS_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup shows all the flows to be mapped with requests</description>
    <label>Flow</label>
    <referenceTo>Flow__c</referenceTo>
    <relationshipName>Related_Flows</relationshipName>
    <type>Lookup</type>
</CustomField>