force-app/main/default/objects/NS_RequestFlow__c/fields/NS_Requests__c.field-meta.xml
<CustomField>
    <fullName>NS_Requests__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup shows all the flows that can be mapped with related requests</description>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipName>Related_Flows</relationshipName>
    <type>Lookup</type>
</CustomField>