force-app/main/default/objects/NS_RequestFlow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NS_Flow__c</columns>
    <columns>NS_Requests__c</columns>
    <columns>NS_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>